fix user controllers
