# routes/users.js
@@ -8,8 +8,10 @@ router.post('/sign_up',handleErrorAsync(usersController.sign_up))
 
 router.post('/sign_in',handleErrorAsync(usersController.sign_in))
 
-router.get('/profile/',isAuth,handleErrorAsync(usersController.profile))
+router.get('/getProfile/',isAuth,handleErrorAsync(usersController.getProfile))
 
-router.post('/updatePassword',isAuth,handleErrorAsync(usersController.updatePassword))
+router.patch('/updatePassword',isAuth,handleErrorAsync(usersController.updatePassword))
+
+router.patch('/updateProfile/',isAuth,handleErrorAsync(usersController.updateProfile))
 
 module.exports = router;
